<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:defaultValue="@string/defaultLocationCode"
        android:inputType="text"
        android:key="@string/locationKey"
        android:singleLine="true"
        android:title="@string/locationTitle" />

    <!--
            <CheckBoxPreference
            android:key="pref_sync"
            android:title="@string/pref_sync"
            android:summary="@string/pref_sync_summ"
            android:defaultValue="true" />
    -->

    <ListPreference
        android:defaultValue="@string/defaultMeasurementUnit"
        android:dialogTitle="@string/measurementTitle"
        android:entries="@array/pref_syncConnectionTypes_entries"
        android:entryValues="@array/pref_syncConnectionTypes_values"
        android:key="@string/measurementKey"
        android:title="@string/measurementTitle" />

</PreferenceScreen>