<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv1"
            style="@style/MyTextBig"
            android:text="@string/today" />

        <TextView
            android:id="@+id/tv2"
            style="@style/MyTextBig"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/dayOfTheWeek" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:contentDescription="@string/imageForTheWeather"
        android:src="@drawable/ic_launcher" />

</LinearLayout>